<resources>
    <!--paths to assets-->
    <string name="strips_json">strips.json</string>
    <string translatable="false" name="striptest_images">images/striptest</string>
    <string translatable="false" name="instruction_images">images/instructions</string>

    <string name="action_settings">Settings</string>
    <string name="app_name">AkvoQR</string>
    <string name="calibrating">Calibrating</string>
    <string name="cut_out_strip">Cutting out strip...</string>
    <string name="detect_shadow">Detecting shadows ...</string>
    <string name="error_calibrating">Calibration failed</string>
    <string name="error_conversion">Could not convert image.</string>
    <string name="error_cut_out_strip">No strip found.</string>
    <string name="error_detect_shadow">Could not detect shadows.</string>
    <string name="error_detection">Error in detection.</string>
    <string name="error_no_finder_pattern_info">No info about finder patterns.</string>
    <string name="error_unknown">Unknown error occurred. Sorry.</string>
    <string name="error_warp">Warp failed.</string>
    <string name="finished">FINISH</string>
    <string name="focus">Focus</string>
    <string name="light">Brightness</string>
    <string name="no_data">No data for patch no.</string>
    <string name="patch_no">Patch no.</string>
    <string name="play_sound">Play Sound</string>
    <string name="please_wait">Please wait...</string>
    <string name="reading_data">Reading data from storage...</string>
    <string name="redo_test">Redo Test</string>
    <string name="save">Save</string>
    <string name="seconds_abbr">sec.</string>
    <string name="start">Start</string>
    <string name="thank_using_caddisfly">Thank you for using Akvo Caddisfly</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_detect_strip">DetectStripActivity</string>
    <string name="title_activity_result">Results</string>
    <string name="title_instruction_detail">Instruction Detail</string>
    <string name="title_instruction_list">Instructions</string>
    <string name="to_results">To results</string>
    <string name="warp">Straightening ...</string>
    <string name="start_test">Perform Test</string>
    <string name="duration">Duration:</string>
    <string name="instructions">Instructions</string>
    <string name="contrast">Shadows</string>
    <string name="init_camera">Initialising camera ...</string>
    <string name="analysing">Analysing image ...</string>
    <string name="prepare_test">Prepare for test</string>

    <string-array name="instructions">
        <item>When you hear a sound, a picture is taken.</item>
    </string-array>
    <array name="instructions_res">
        <item>@raw/futurebeep2</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prepare_camera_instr">NB: Do not take a sample yet.\n\nHold camera above card.\n\nAdjust your position until checks are OK.</string>
    <string name="ready">Ready</string>
    <string name="next">Next</string>
    <string name="picture_taken">Picture taken</string>
    <string name="ready_for_picture">"Ready for picture "</string>
    <string name="waiting">"Waiting "</string>

</resources>
