<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_cameraMainRelativeLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:id="@+id/camera_preview"
        >
    </FrameLayout>
    <org.akvo.akvoqr.ui.FinderPatternIndicatorView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:id="@+id/activity_cameraFinderPatternIndicatorView"
        />
    <org.akvo.akvoqr.ui.LevelView
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/activity_cameraImageViewLevel"
        android:visibility="visible"/>
    <RelativeLayout
        android:id="@+id/transparent_window"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light"
            android:id="@+id/activity_cameraMessagesLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <org.akvo.akvoqr.ui.QualityCheckBrightnessView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:id="@+id/activity_cameraImageViewExposure"/>
                <TextView
                    android:id="@+id/camera_preview_messageLightView"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/darker_gray"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:text="@string/light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <org.akvo.akvoqr.ui.QualityCheckShadowsView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:id="@+id/activity_cameraImageViewContrast"/>
                <TextView
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:id="@+id/camera_preview_messageContrastView"
                    android:textColor="@android:color/darker_gray"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:text="@string/contrast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera_preview_messageDurationView"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/activity_cameraMessagesLayout"
            android:text="@string/duration"/>
        <org.akvo.akvoqr.ui.ProgressIndicatorView
            android:layout_height="26dp"
            android:layout_width="match_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/camera_preview_messageDurationView"
            android:id="@+id/activity_cameraProgressIndicatorView"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/start_button_grey"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/activity_cameraStartButton"
            android:visibility="visible"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/activity_cameraInitCameraProgressBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_marginRight="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/init_camera" />
</LinearLayout>
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera_preview_messageFocusView"
        android:textColor="@android:color/white"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:background="@drawable/button_semi_transparent_grey_oval"
        android:layout_gravity="center_horizontal"
        android:text="@string/focus"
        android:visibility="gone"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/focus_red"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:id="@+id/activity_cameraImageViewFocus"
        android:visibility="gone"/>-->

</RelativeLayout>